tests/substructural/check/return_leak_ref_field_reports_once_via_nll_unborrow.err.expected
error: at 7:17: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 's.r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
   |
 7 |                 return
   |                 ^^^^^^
  = note: reference declared here
   |
 4 |               s: S;
   |               ^^^^^
